# mcltl-rs

./: Cargo.toml  rust-toolchain.toml
src/: bin.rs  lib.rs
src/utils/: dot.rs
src/verifier/: mod.rs  model_checker.rs
tests/: verifier.rs
